# tml

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
models/: mnist.py  model.py
notebooks/: MNIST_MLP_0_7.ipynb  MNIST_MLP_0_7_test_model_perofrmance.ipynb  MNIST_MLP_1_7.ipynb  check_the_outputs.ipynb  comparing_outputs_tf_torch.ipynb  example.ipynb  example.py  mlp_example.ipynb  run_pipeline.ipynb
tml/: analysis.py  pipeline.py  plotting.py  tml_dataset.py  utils.py
tml/config/: config.yaml
tml/configs/: config.yaml  config_test.yaml
tml/data/: data_utils.py  get_l1_l2.py  load_data.py  prep_typebased.py
tml/experiments/: main.ipynb  main.py
tml/model/: dropout.py  pipeline.py  tml_dataset.py  utils.py
tml/models/: model.py
tml/plotting/: plotting.py  utils.py
tml/training/: dropout.py  trainer.py
tml/utils/: plotting.py
utils/: metrics.py  utils.py
