[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tml"
version = "0.1.0"
description = "A python package."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Ehsan Karimiara", email = "e.karimiara@gmail.com"}
]

# dependencies = []

# [project.optional-dependencies]
# dev = [
#     "pytest>=6.0",
#     "black==23.1.0"
# ]
# benchmark = [
#     # Add any dependencies needed for benchmarking
# ]
# datasets = [
#     # Add any dependencies specific to dataset management
# ]

[tool.setuptools]
packages = ["tml"]

[tool.setuptools.package-data]
tml = ["models/*.py"]  # Includes models as data files (not part of the package itself)
